# aegis

./: .gitignore  DEMO_SCRIPT.md  PROJECT_REPORT.md  README.md  vercel.json
aegis-attestation-circuit/: .gitignore  Nargo.toml  Prover.toml
aegis-attestation-circuit/src/: main.nr
aegis-circuit/: .gitignore  Nargo.toml  Prover.toml
aegis-circuit/src/: main.nr
aegis-contract/: Cargo.toml
aegis-contract/fixtures/compliance_attestation/: proof  public_inputs  vk
aegis-contract/fixtures/spend_proof/: proof  public_inputs  vk
aegis-contract/src/: lib.rs  test.rs
aegis-contract/tests/: real_attestation_proof.rs  real_proof.rs
agent-hero-section/: pnpm-lock.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/e2e/: smoke.mjs
dashboard/src/: AgentDetailDrawer.tsx  AnimatedNumber.tsx  App.css  App.tsx  AttestationScreen.tsx  EventsContext.tsx  FleetHealth.tsx  HeroOrb.tsx  LandingPage.css  LandingPage.tsx  LiveSealedFeed.tsx  PitchDeck.css  PitchDeck.tsx  ProofInspector.tsx  TreasuryConsole.tsx  VendorsScreen.tsx  api.ts  index.css  roleColors.ts
deploy/: 01_inspect_init.sh  02_init.sh  03_register_and_policy.sh  04_inspect_submit_spend.sh  05_submit_spend.sh  06_verify_state.sh  07_live_proof.sh  contract_id.txt
docs/: shadow.md
orchestrator/: package-lock.json  package.json
orchestrator/src/: chain.ts  demo-run.ts  poseidon.ts  prover.ts  queue.ts  roster.ts  scenario.ts  seed.ts  selftest.ts  server.ts  treasury.ts  wsl.ts
